fix: UI 개선 - 전체 높이 dvh 설정 - 모바일에 따른 반응형 헤더 구현 - 홈페이지 모바일 글씨 여백 추가 - body, html에 overflow hidden 추가

--- a/front-end/src/styles/index.css
+++ b/front-end/src/styles/index.css
@@ -1,6 +1,12 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@layer base {
+  html, body {
+    @apply overflow-hidden h-full;
+  }
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
